<resources>
    <string name="app_name" translatable="false">Flee the Field</string>
    <string name="levels">Levels</string>
    <string name="you_nrecieved">You\nRecieved</string>
    <string name="you_are_ncatched">You Are\nCatched</string>
    <string name="reply">Reply</string>
    <string name="main_menu">Main menu</string>
    <string name="being_planned">Being Planned</string>
    <string name="get_bonus">Get Bonus</string>
    <string name="start">Start</string>
    <string name="settings">Settings</string>
    <string name="sound">Sound</string>
    <string name="vibration">Vibration</string>
    <string name="language">Language</string>
    <string name="movie_with_swipes">Movie with swipes</string>
    <string name="win">Win</string>
    <string name="next_level">next Level</string>
    <string name="score">Score:</string>
    <string name="stone">Stone</string>
    <string name="no_way">There is no way</string>
    <string name="wall">Wall</string>
    <string name="you_lost">You lost the bonus !</string>
    <string name="your_level">Your level :</string>
</resources>