<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView

        android:id="@+id/nameGame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/_25sdp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:text="@string/win"
        android:textAllCaps="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.25" />
    <TextView

        android:id="@+id/score"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="@dimen/_24sdp"
        android:textAllCaps="true"
        android:text=""
        app:layout_constraintTop_toBottomOf="@id/nameGame"
        app:layout_constraintVertical_bias="0.05"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <Button

        android:id="@+id/nextLevel"
        android:layout_width="@dimen/_166sdp"
        android:layout_height="@dimen/_40sdp"
        android:backgroundTint="#F31111"
        android:text="@string/next_level"
        android:textColor="@color/white"
        android:textSize="@dimen/_12sdp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/score"
        app:layout_constraintVertical_bias="0.1" />

    <Button

        android:id="@+id/replay"
        android:layout_width="@dimen/_166sdp"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:backgroundTint="#F31111"
        android:text="@string/reply"
        android:textColor="@color/white"
        android:textSize="@dimen/_12sdp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/nextLevel"
        app:layout_constraintVertical_bias="0" />

    <Button

        android:id="@+id/mainMenu"
        android:layout_width="@dimen/_166sdp"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:backgroundTint="#F31111"
        android:text="@string/main_menu"
        android:textColor="@color/white"
        android:textSize="@dimen/_12sdp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/replay"
        app:layout_constraintVertical_bias="0" />


</androidx.constraintlayout.widget.ConstraintLayout>